@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-17T08:24:01Z",
-  "count_outdated" : 2158,
-  "uniques_outdated" : 433,
-  "count" : 2189,
+  "timestamp" : "2022-06-18T01:43:22Z",
+  "count_outdated" : 2160,
+  "uniques_outdated" : 434,
+  "count" : 2191,
   "uniques" : 454,
   "clones" : [
-    {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
